arreglar sobre mi

--- a/en/sobre-mi.html
+++ b/en/sobre-mi.html
@@ -11,16 +11,18 @@ subtitle: "Developer | Designer | Content creator"
 
     <!-- Imagen centrada -->
     <div class="flex flex-col items-center text-center mb-10">
-      <img src="{{ '/assets/img/foto-perfil.jpg.jpg' | relative_url }}" alt="Foto de Cristina"
+      <img src="{{ '/assets/img/foto-perfil.jpg' | relative_url }}" alt="Foto de Cristina"
            class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
            style="width: 120px; height: 120px; object-fit: cover;">
       <h2 class="text-3xl font-bold mb-2">🧑‍💻 About me</h2>
-      <p class="text-base max-w-xl">👋 I'm Cristina (often called Chispi by colleagues). Welcome to my GitHub!</p>
-    </div>
+      </div>
 
     <!-- Contenido en bloques con buen espaciado -->
     <div class="space-y-10 text-left">
-
+      <div>
+        <p>👋 I'm Cristina (often called Chispi by colleagues). Welcome to my GitHub!</p>
+      </div>
+      
       <div>
          <p>👩‍🔬 Former <strong>mathematics and science teacher</strong> turned <strong>data analyst</strong> with a passion for technology, education, and problem-solving. Specialized in:</p>
          <ul class="list-disc list-inside mt-2">
