--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -11,16 +11,18 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 
     <!-- Imagen centrada -->
     <div class="flex flex-col items-center text-center mb-10">
-      <img src="{{ '/assets/img/foto-perfil.jpg.jpg' | relative_url }}" alt="Foto de Cristina"
+      <img src="{{ '/assets/img/foto-perfil.jpg' | relative_url }}" alt="Foto de Cristina"
            class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
            style="width: 120px; height: 120px; object-fit: cover;">
       <h2 class="text-3xl font-bold mb-2">🧑‍💻 Sobre mí</h2>
-      <p class="text-base max-w-xl">👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi Página!</p>
-    </div>
+     </div>
 
     <!-- Contenido en bloques con buen espaciado -->
     <div class="space-y-10 text-left">
-
+      <div> 
+        <p>👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi Página!</p>
+      </div>
+      
       <div>
         <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
         <ul class="list-disc list-inside mt-2">
