--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -6,26 +6,24 @@ hero_image_light: "/assets/img/sobre-mi-bg-light.jpg"
 subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 ---
 
-<section id="sobre-mi" class="py-12" xmlns="http://www.w3.org/1999/html">
+<section id="sobre-mi" class="py-16">
   <div class="container max-w-3xl mx-auto px-4">
 
     <!-- Imagen centrada -->
-    <div class="flex flex-col items-center text-center mb-10">
+    <div class="flex flex-col items-center text-center mb-12">
       <img src="{{ '/assets/img/foto-perfil.jpg' | relative_url }}" alt="Foto de Cristina"
-           class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
-           style="width: 120px; height: 120px; object-fit: cover;">
-      <h2 class="text-3xl font-bold mb-2">🧑‍💻 Sobre mí</h2>
-     </div>
+           class="rounded-full shadow-lg border-4 border-verde-1 mb-4"
+           style="width: 130px; height: 130px; object-fit: cover;">
+      <h2 class="text-4xl font-bold mb-2">🧑‍💻 Sobre mí</h2>
+      <p class="text-lg text-gray-600 dark:text-gray-300 mt-2">👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi Página!</p>
+    </div>
 
     <!-- Contenido en bloques con buen espaciado -->
-    <div class="space-y-10 text-left">
-      <div> 
-        <p>👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi Página!</p>
-      </div>
+    <div class="space-y-14 text-left text-lg leading-relaxed">
       
       <div>
         <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
-        <ul class="list-disc list-inside mt-2">
+        <ul class="list-disc list-inside mt-3 pl-2">
           <li>📊 <strong>Python, Pandas, SQL</strong></li>
           <li>📄 <strong>LaTeX, Pandoc</strong></li>
           <li>📈 <strong>Matplotlib, Seaborn, Power BI</strong></li>
@@ -34,7 +32,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 
       <div>
         <p>🍀 Graduada del bootcamp de <strong>IMMUNE Institute</strong>:</p>
-        <ul class="list-disc list-inside mt-2">
+        <ul class="list-disc list-inside mt-3 pl-2">
           <li>Machine Learning</li>
           <li>Visualización de Datos</li>
           <li>Análisis Avanzado</li>
@@ -44,9 +42,9 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
       <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
 
       <div>
-        <h3 class="text-xl font-semibold mb-3">🔧 Habilidades</h3>
+        <h3 class="text-2xl font-semibold mb-4">🔧 Habilidades</h3>
         <p><strong>Lenguajes de Programación:</strong>
-         <div class="flex flex-wrap gap-3">
+         <div class="flex flex-wrap gap-2 mb-2">
            <img src="https://img.shields.io/badge/-Python-blue" alt="Python">
            <img src="https://img.shields.io/badge/-SQL-orange" alt="SQL">
            <img src="https://img.shields.io/badge/-HTML-pink" alt="HTML">
@@ -62,7 +60,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
       </div>
 
       <div>
-        <h3 class="text-xl font-semibold mb-3">🖥️ Tecnologías Principales</h3>
+        <h3 class="text-2xl font-semibold mb-4">🖥️ Tecnologías Principales</h3>
         <div class="flex flex-wrap gap-3">
           <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
           <img src="https://img.shields.io/badge/-LaTeX-008080?logo=latex&logoColor=white" alt="LaTeX">
@@ -70,8 +68,8 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
       </div>
 
       <div>
-        <h3 class="text-xl font-semibold mb-3">🔥 ¿Qué estoy haciendo ahora?</h3>
-        <ul class="list-disc list-inside mt-2">
+        <h3 class="text-2xl font-semibold mb-4">🔥 ¿Qué estoy haciendo ahora?</h3>
+        <ul class="list-disc list-inside mt-3 pl-2">
           <li>💻 Modelado de datos y dashboards interactivos.</li>
           <li>📖 NetworkX para análisis de redes sociales.</li>
           <li>🤝 Abierta a colaboraciones.</li>
@@ -79,8 +77,8 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
       </div>
 
       <div>
-        <h3 class="text-xl font-semibold mb-3">🎉 Curiosidades Sobre Mí</h3>
-        <ul class="list-disc list-inside mt-2">
+        <h3 class="text-2xl font-semibold mb-4">🎉 Curiosidades Sobre Mí</h3>
+        <ul class="list-disc list-inside mt-3 pl-2">
           <li>🎮 500+ horas en Stardew Valley</li>
           <li>✈️ Soporte en Riot Games</li>
           <li>🐶 Mis perras: <strong>Riven</strong> y <strong>Haru</strong></li>
