decoración about me

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -21,7 +21,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
     <!-- Contenido en bloques con buen espaciado -->
     <div class="space-y-14 text-left text-lg leading-relaxed">
       
-      <div>
+      <div class="box box-marino">
         <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
         <ul class="list-disc list-inside mt-3 pl-2">
           <li>📊 <strong>Python, Pandas, SQL</strong></li>
@@ -30,7 +30,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
         </ul>
       </div>
 
-      <div>
+      <div class="box box-primavera">
         <p>🍀 Graduada del bootcamp de <strong>IMMUNE Institute</strong>:</p>
         <ul class="list-disc list-inside mt-3 pl-2">
           <li>Machine Learning</li>
@@ -41,7 +41,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 
       <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
 
-      <div>
+      <div class="box box-floral">
         <h3 class="text-2xl font-semibold mb-4">🔧 Habilidades</h3>
         <p><strong>Lenguajes de Programación:</strong>
          <div class="flex flex-wrap gap-2 mb-2">
@@ -59,7 +59,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
         <p><strong>Bases de Datos:</strong> MySQL, OracleSQL</p>
       </div>
 
-      <div>
+      <div class="box box-marino">
         <h3 class="text-2xl font-semibold mb-4">🖥️ Tecnologías Principales</h3>
         <div class="flex flex-wrap gap-3">
           <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
@@ -67,7 +67,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
         </div>
       </div>
 
-      <div>
+      <div class="box box-primavera">
         <h3 class="text-2xl font-semibold mb-4">🔥 ¿Qué estoy haciendo ahora?</h3>
         <ul class="list-disc list-inside mt-3 pl-2">
           <li>💻 Modelado de datos y dashboards interactivos.</li>
@@ -76,7 +76,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
         </ul>
       </div>
 
-      <div>
+      <div class="box box-floral">
         <h3 class="text-2xl font-semibold mb-4">🎉 Curiosidades Sobre Mí</h3>
         <ul class="list-disc list-inside mt-3 pl-2">
           <li>🎮 500+ horas en Stardew Valley</li>
