--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -19,7 +19,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
     </div>
 
     <!-- Contenido en bloques con buen espaciado -->
-    <div class="space-y-14 text-left text-lg leading-relaxed">
+    <div class="box-container space-y-14 text-left text-lg leading-relaxed">
       
       <div class="box box-sol">
         <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
@@ -38,9 +38,9 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
           <li>Análisis Avanzado</li>
         </ul>
       </div>
-
-      <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
-
+      <div class="box box-coral">
+        <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
+      </div>
       <div class="box box-hoja">
         <h3 class="text-2xl font-semibold mb-4">🔧 Habilidades</h3>
         <p><strong>Lenguajes de Programación:</strong>
