--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -19,72 +19,88 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
     </div>
 
     <!-- Contenido en bloques con buen espaciado -->
-    <div class="box-container space-y-14 text-left text-lg leading-relaxed">
+    <div class="row g-4 text-left text-lg leading-relaxed">
       
-      <div class="box box-sol">
-        <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
-        <ul class="list-disc list-inside mt-3 pl-2">
-          <li>📊 <strong>Python, Pandas, SQL</strong></li>
-          <li>📄 <strong>LaTeX, Pandoc</strong></li>
-          <li>📈 <strong>Matplotlib, Seaborn, Power BI</strong></li>
-        </ul>
-      </div>
-
-      <div class="box box-fuego">
-        <p>🍀 Graduada del bootcamp de <strong>IMMUNE Institute</strong>:</p>
-        <ul class="list-disc list-inside mt-3 pl-2">
-          <li>Machine Learning</li>
-          <li>Visualización de Datos</li>
-          <li>Análisis Avanzado</li>
-        </ul>
-      </div>
-      <div class="box box-coral">
-        <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
-      </div>
-      <div class="box box-hoja">
-        <h3 class="text-2xl font-semibold mb-4">🔧 Habilidades</h3>
-        <p><strong>Lenguajes de Programación:</strong>
-         <div class="flex flex-wrap gap-2 mb-2">
-           <img src="https://img.shields.io/badge/-Python-blue" alt="Python">
-           <img src="https://img.shields.io/badge/-SQL-orange" alt="SQL">
-           <img src="https://img.shields.io/badge/-HTML-pink" alt="HTML">
-           <img src="https://img.shields.io/badge/-CSS-green" alt="CSS">
-           <img src="https://img.shields.io/badge/-R-red" alt="R">
-         </div>
-        </p>
-
-        <p><strong>Frameworks:</strong> Pandas, NumPy, SciPy, Matplotlib, Pytest, scikit-learn, Seaborn</p>
-        <p><strong>Herramientas de Visualización:</strong> Power BI, Tableau</p>
-        <p><strong>Herramientas de Desarrollo:</strong> LaTeX, Pandoc, Jupyter Notebook, Google Colab, Git, Anaconda</p>
-        <p><strong>Bases de Datos:</strong> MySQL, OracleSQL</p>
-      </div>
-
-      <div class="box box-mar">
-        <h3 class="text-2xl font-semibold mb-4">🖥️ Tecnologías Principales</h3>
-        <div class="flex flex-wrap gap-3">
-          <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
-          <img src="https://img.shields.io/badge/-LaTeX-008080?logo=latex&logoColor=white" alt="LaTeX">
+      <div class="col-12 col-md-6">
+        <div class="box box-sol">
+          <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
+          <ul class="list-disc list-inside mt-3 pl-2">
+            <li>📊 <strong>Python, Pandas, SQL</strong></li>
+            <li>📄 <strong>LaTeX, Pandoc</strong></li>
+            <li>📈 <strong>Matplotlib, Seaborn, Power BI</strong></li>
+          </ul>
         </div>
       </div>
 
-      <div class="box box-cielo">
-        <h3 class="text-2xl font-semibold mb-4">🔥 ¿Qué estoy haciendo ahora?</h3>
-        <ul class="list-disc list-inside mt-3 pl-2">
-          <li>💻 Modelado de datos y dashboards interactivos.</li>
-          <li>📖 NetworkX para análisis de redes sociales.</li>
-          <li>🤝 Abierta a colaboraciones.</li>
-        </ul>
+      <div class="col-12 col-md-6">
+        <div class="box box-fuego">
+          <p>🍀 Graduada del bootcamp de <strong>IMMUNE Institute</strong>:</p>
+          <ul class="list-disc list-inside mt-3 pl-2">
+            <li>Machine Learning</li>
+            <li>Visualización de Datos</li>
+            <li>Análisis Avanzado</li>
+          </ul>
+        </div>
+      </div>
+        
+      <div class="col-12">
+        <div class="box box-coral">
+          <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
+        </div>
       </div>
 
-      <div class="box box-uva">
-        <h3 class="text-2xl font-semibold mb-4">🎉 Curiosidades Sobre Mí</h3>
-        <ul class="list-disc list-inside mt-3 pl-2">
-          <li>🎮 500+ horas en Stardew Valley</li>
-          <li>✈️ Soporte en Riot Games</li>
-          <li>🐶 Mis perras: <strong>Riven</strong> y <strong>Haru</strong></li>
-          <li>🎨 Diseñadora de uñas y tejedora</li>
-          <li>🌍 Aprendiendo japonés para visitar <strong>Kumamoto</strong></li>
-        </ul>
+      <div class="col-12">
+        <div class="box box-hoja">
+          <h3 class="text-2xl font-semibold mb-4">🔧 Habilidades</h3>
+          <p><strong>Lenguajes de Programación:</strong>
+           <div class="flex flex-wrap gap-2 mb-2">
+             <img src="https://img.shields.io/badge/-Python-blue" alt="Python">
+             <img src="https://img.shields.io/badge/-SQL-orange" alt="SQL">
+             <img src="https://img.shields.io/badge/-HTML-pink" alt="HTML">
+             <img src="https://img.shields.io/badge/-CSS-green" alt="CSS">
+             <img src="https://img.shields.io/badge/-R-red" alt="R">
+           </div>
+          </p>
+  
+          <p><strong>Frameworks:</strong> Pandas, NumPy, SciPy, Matplotlib, Pytest, scikit-learn, Seaborn</p>
+          <p><strong>Herramientas de Visualización:</strong> Power BI, Tableau</p>
+          <p><strong>Herramientas de Desarrollo:</strong> LaTeX, Pandoc, Jupyter Notebook, Google Colab, Git, Anaconda</p>
+          <p><strong>Bases de Datos:</strong> MySQL, OracleSQL</p>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6">
+        <div class="box box-mar">
+          <h3 class="text-2xl font-semibold mb-4">🖥️ Tecnologías Principales</h3>
+          <div class="flex flex-wrap gap-3">
+            <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
+            <img src="https://img.shields.io/badge/-LaTeX-008080?logo=latex&logoColor=white" alt="LaTeX">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6">
+        <div class="box box-cielo">
+          <h3 class="text-2xl font-semibold mb-4">🔥 ¿Qué estoy haciendo ahora?</h3>
+          <ul class="list-disc list-inside mt-3 pl-2">
+            <li>💻 Modelado de datos y dashboards interactivos.</li>
+            <li>📖 NetworkX para análisis de redes sociales.</li>
+            <li>🤝 Abierta a colaboraciones.</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-12">
+        <div class="box box-uva">
+          <h3 class="text-2xl font-semibold mb-4">🎉 Curiosidades Sobre Mí</h3>
+          <ul class="list-disc list-inside mt-3 pl-2">
+            <li>🎮 500+ horas en Stardew Valley</li>
+            <li>✈️ Soporte en Riot Games</li>
+            <li>🐶 Mis perras: <strong>Riven</strong> y <strong>Haru</strong></li>
+            <li>🎨 Diseñadora de uñas y tejedora</li>
+            <li>🌍 Aprendiendo japonés para visitar <strong>Kumamoto</strong></li>
+          </ul>
+        </div>
       </div>
 
     </div>
