--- a/en/index.html
+++ b/en/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Welcome to Chispi Page
+lang: en
 hero_image_dark: "/assets/img/index-bg-dark.jpg"
 hero_image_light: "/assets/img/index-bg-light.jpg"
 hide_header: true
