--- a/gracias.html
+++ b/gracias.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: ¡Gracias!
+lang: es
 hero_image_dark: "/assets/img/contacto-bg-dark.jpg"
 hero_image_light: "/assets/img/contacto-bg-light.jpg"
 ---
