--- a/proyectos.html
+++ b/proyectos.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Proyectos
+lang: es
 hero_image_dark: "/assets/img/proyectos-bg-dark.jpg"
 hero_image_light: "/assets/img/proyectos-bg-light.jpg"
 ---
