--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Sobre mí
+lang: es
 hero_image_dark: "/assets/img/sobre-mi-bg-dark.jpg"
 hero_image_light: "/assets/img/sobre-mi-bg-light.jpg"
 subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
@@ -9,21 +10,21 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
 <section id="sobre-mi" class="py-16">
   <div class="container max-w-3xl mx-auto px-4">
 
-    <!-- Imagen centrada -->
+    <!-- Imagen y saludo -->
     <div class="flex flex-col items-center text-center mb-12">
       <img src="{{ '/assets/img/foto-perfil.jpg' | relative_url }}" alt="Foto de Cristina"
-           class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
+           class="rounded-full shadow-lg border-4 border-verde-1 mb-3"
            style="width: 130px; height: 130px; object-fit: cover;">
       <h2 class="text-4xl font-bold mb-2">🧑‍💻 Sobre mí</h2>
-      <p class="text-lg text-gray-600 dark:text-gray-300 mt-2">👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi Página!</p>
+      <p class="text-lg text-gray-600 dark:text-gray-300 mt-2">👋 Soy Cristina — o Chispi, como me conocen muchos colegas. ¡Gracias por visitar mi página!</p>
     </div>
 
-    <!-- Contenido en bloques con buen espaciado -->
-    <div class="row g-4 align-items-stretch">
-      
-      <div class="col-12 col-md-6 d-flex">
-        <div class="box box-sol h-100 w-100 d-flex flex-column justify-content-center">
-          <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
+    <!-- Contenido -->
+    <div class="row g-4 text-left text-lg leading-relaxed">
+
+      <div class="col-12 col-md-6">
+        <div class="box box-sol">
+          <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> especializada en <strong>análisis de datos</strong>. Algunas de mis herramientas favoritas:</p>
           <ul class="list-disc list-inside mt-3 pl-2">
             <li>📊 <strong>Python, Pandas, SQL</strong></li>
             <li>📄 <strong>LaTeX, Pandoc</strong></li>
@@ -32,9 +33,9 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
         </div>
       </div>
 
-      <div class="col-12 col-md-6 d-flex">
-        <div class="box box-fuego h-100 w-100 d-flex flex-column justify-content-center">
-          <p>🍀 Graduada del bootcamp de <strong>IMMUNE Institute</strong>:</p>
+      <div class="col-12 col-md-6">
+        <div class="box box-fuego">
+          <p>🍀 Recientemente completé un bootcamp de <strong>Análisis de Datos en IMMUNE Institute</strong>, trabajando en proyectos reales sobre:</p>
           <ul class="list-disc list-inside mt-3 pl-2">
             <li>Machine Learning</li>
             <li>Visualización de Datos</li>
@@ -42,23 +43,25 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
           </ul>
         </div>
       </div>
-        
-      <div class="col-12 d-flex">
-        <div class="box box-coral flex-fill">
-          <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
+
+      <div class="col-12">
+        <div class="box box-coral">
+          <p>👀 Gracias a mi formación en <strong>bioquímica y educación</strong>, combino el razonamiento científico con la creatividad para resolver problemas complejos.</p>
         </div>
       </div>
 
-      <div class="col-12 d-flex">
-        <div class="box box-hoja flex-fill">
+      <div class="col-12">
+        <div class="box box-hoja">
           <h3 class="text-2xl font-semibold mb-4">🔧 Habilidades</h3>
-          {% include skills/section.html %}
+          {% for section in site.data.skills-es %}
+          {% include skills/section.html section=section %}
+          {% endfor %}
         </div>
       </div>
 
-      <div class="col-12 col-md-6 h-100 w-100 d-flex flex-column justify-content-center">
+      <div class="col-12 col-md-6">
         <div class="box box-mar">
-          <h3 class="text-2xl font-semibold mb-4">🖥️ Tecnologías Principales</h3>
+          <h3 class="text-2xl font-semibold mb-4">🖥️ Tecnologías principales</h3>
           <div class="flex flex-wrap gap-3">
             <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
             <img src="https://img.shields.io/badge/-LaTeX-008080?logo=latex&logoColor=white" alt="LaTeX">
@@ -66,26 +69,26 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
         </div>
       </div>
 
-      <div class="col-12 col-md-6 h-100 w-100 d-flex flex-column justify-content-center">
+      <div class="col-12 col-md-6">
         <div class="box box-cielo">
           <h3 class="text-2xl font-semibold mb-4">🔥 ¿Qué estoy haciendo ahora?</h3>
           <ul class="list-disc list-inside mt-3 pl-2">
-            <li>💻 Modelado de datos y dashboards interactivos.</li>
-            <li>📖 NetworkX para análisis de redes sociales.</li>
-            <li>🤝 Abierta a colaboraciones.</li>
+            <li>💻 Mejorando habilidades en dashboards interactivos y modelado de datos.</li>
+            <li>📖 Explorando análisis de redes sociales con <strong>NetworkX</strong>.</li>
+            <li>🤝 Abierta a colaborar en proyectos de datos o automatización.</li>
           </ul>
         </div>
       </div>
 
-      <div class="col-12 d-flex">
-        <div class="box box-uva flex-fill">
-          <h3 class="text-2xl font-semibold mb-4">🎉 Curiosidades Sobre Mí</h3>
+      <div class="col-12">
+        <div class="box box-uva">
+          <h3 class="text-2xl font-semibold mb-4">🎉 Curiosidades</h3>
           <ul class="list-disc list-inside mt-3 pl-2">
-            <li>🎮 500+ horas en Stardew Valley</li>
-            <li>✈️ Soporte en Riot Games</li>
-            <li>🐶 Mis perras: <strong>Riven</strong> y <strong>Haru</strong></li>
-            <li>🎨 Diseñadora de uñas y tejedora</li>
-            <li>🌍 Aprendiendo japonés para visitar <strong>Kumamoto</strong></li>
+            <li>🎮 Más de 500 horas en Stardew Valley</li>
+            <li>✈️ Soporte técnico en Riot Games</li>
+            <li>🐶 Mamá perruna de <strong>Riven</strong> y <strong>Haru</strong></li>
+            <li>🎨 Apasionada del tejido y el nail art</li>
+            <li>🌍 Estudiando japonés para visitar <strong>Kumamoto</strong> (¡hogar de las estatuas de One Piece!)</li>
           </ul>
         </div>
       </div>
@@ -93,3 +96,4 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
     </div>
   </div>
 </section>
+
