--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -53,9 +53,11 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
       <div class="col-12">
         <div class="box box-hoja">
           <h3 class="text-2xl font-semibold mb-4">🔧 Habilidades</h3>
-          {% for section in site.data.skills-es %}
-          {% include skills/section.html section=section %}
+          
+          {% for section in site.data.skills %}
+            {% include skills/section.html section=section %}
           {% endfor %}
+
         </div>
       </div>
 
