--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -13,7 +13,7 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
     <!-- Imagen y saludo -->
     <div class="flex flex-col items-center text-center mb-12">
       <img src="{{ '/assets/img/foto-perfil.jpg' | relative_url }}" alt="Foto de Cristina"
-           class="rounded-full shadow-lg border-4 border-verde-1 mb-3"
+           class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
            style="width: 130px; height: 130px; object-fit: cover;">
       <h2 class="text-4xl font-bold mb-2">🧑‍💻 Sobre mí</h2>
       <p class="text-lg text-gray-600 dark:text-gray-300 mt-2">👋 Soy Cristina — o Chispi, como me conocen muchos colegas. ¡Gracias por visitar mi página!</p>
