--- a/en/contacto.html
+++ b/en/contacto.html
@@ -2,6 +2,7 @@
 layout: default
 title: Contact
 lang: en
+hero: true
 hero_image_dark: "/assets/img/contacto-bg-dark.jpg"
 hero_image_light: "/assets/img/contacto-bg-light.jpg"
 ---
