--- a/index.html
+++ b/index.html
@@ -2,39 +2,15 @@
 layout: default
 title: Bienvenido a Chispi Page
 lang: es
+hero: true
 hero_image_dark: "/assets/img/index-bg-dark.jpg"
 hero_image_light: "/assets/img/index-bg-light.jpg"
-hide_header: true
 ---
 
-<header class="hero d-flex align-items-center justify-content-center text-center position-relative"
-  style="min-height: 100vh;"
-  data-img-dark="{{ page.hero_image_dark | default: '/assets/img/hero-bg-dark.jpg' | relative_url }}"
-  data-img-light="{{ page.hero_image_light | default: '/assets/img/hero-bg-light.jpg' | relative_url }}">
-
-  <!-- Partículas -->
-  <div id="particles-js" 
-    class="position-absolute top-0 start-0 w-100 h-100"
-    style="z-index: 0;"></div>
-
-  <!-- Contenido centrado -->
-  <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
-    <div class="text-box">
-      <img src="{{ '/assets/img/perfil-Chispi.jpg' | relative_url }}" alt="Avatar de Chispi"
-        class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
-        style="width: 120px; height: 120px; object-fit: cover;">
-      <h1 class="display-3 fw-bold">¡Hola! Soy <span class="text-verde-1">Chispi</span></h1>
-      <p class="lead fst-italic">Desarrolladora | Analista de Datos | Creadora de contenido</p>
-      <p class="lead mb-4">
-        Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más.
-      </p>
-
-      <div class="d-flex flex-wrap gap-3 justify-content-center">
-        <a href="{{ '/sobre-mi.html' | relative_url }}" class="btn btn-outline-verde-1 btn-lg">Conóceme más</a>
-        <a href="{{ '/proyectos.html' | relative_url }}" class="btn btn-outline-verde-4 btn-lg">Ojea mis proyectos</a>
-        <a href="{{ '/posts.html' | relative_url }}" class="btn btn-outline-verde-3 btn-lg">Lee mis blogs</a>
-        <a href="{{ '/contacto.html' | relative_url }}" class="btn btn-outline-verde-2 btn-lg">Contacto</a>
-      </div>
-    </div>
-  </div>
-</header>
+{% include components/hero-header.html
+img="/assets/img/perfil-Chispi.jpg"
+title="¡Hola! Soy <span class='text-verde-1'>Chispi</span>"
+subtitle="Desarrolladora | Analista de Datos | Creadora de contenido"
+description="Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más."
+buttons=site.data.index_buttons
+%}
