--- a/tags.html
+++ b/tags.html
@@ -16,9 +16,26 @@ permalink: /tags/
       <div class="col-md-4 mb-3">
         <a href="{{ '/tags/' | append: tag_name | append: '/' | relative_url }}" 
             class="d-block border rounded p-3 text-decoration-none h-100">
-          <strong>{{ tag_name }}</strong> <span class="badge bg-primary">{{ tag_posts | size }}</span>
+          <strong>{{ tag_name }}</strong> 
+          <span class="badge bg-primary">{{ tag_posts | size }}</span>
         </a>
       </div>
     {% endfor %}
   </div>
+
+  <!-- Paginación -->
+  {% if paginator.total_pages > 1 %}
+  <nav class="d-flex justify-content-between mt-4">
+    {% if paginator.previous_page %}
+    <a class="btn btn-outline-primary" href="{{ paginator.previous_page_path | relative_url }}">&larr; Más recientes</a>
+    {% else %}
+    <span></span>
+    {% endif %}
+
+    {% if paginator.next_page %}
+    <a class="btn btn-outline-primary" href="{{ paginator.next_page_path | relative_url }}">Más antiguos &rarr;</a>
+    {% endif %}
+  </nav>
+  {% endif %}
+  
 </section>
