--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@ img="/assets/img/perfil-Chispi.jpg"
 title="¡Hola! Soy <span class='text-verde-1'>Chispi</span>"
 subtitle="Desarrolladora | Analista de Datos | Creadora de contenido"
 description="Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más."
-buttons=site.data.index_buttons
+buttons=site.data.buttons
 %}
