--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@ img="/assets/img/perfil-Chispi.jpg"
 title="Hi! I'm <span class='text-verde-1'>Chispi</span>"
 subtitle="Developer | Data Analyst | Content Creator"
 description="Welcome to <strong>Chispi Page</strong>: a place where I share my ideas, projects, devlogs, art and more."
-buttons=site.data.index_buttons_en
+buttons=site.data.buttons
 %}
 
 
