arreglar enlaces y añadir páginas 404, mantenimiento y en proceso

--- a/en/index.html
+++ b/en/index.html
@@ -1,18 +1,13 @@
 ---
-layout: default
+layout: landing
 title: Welcome to Chispi Page
 lang: en
+permalink: /en/index.html
 hero: true
 hero_image_dark: "/assets/img/index-bg-dark.jpg"
 hero_image_light: "/assets/img/index-bg-light.jpg"
+hero_img: "/assets/img/perfil-Chispi.jpg"
+hero_title: "Hi! I'm <span class='text-verde-1'>Chispi</span>"
+hero_subtitle: "Developer | Data Analyst | Content Creator"
+hero_description: "Welcome to <strong>Chispi Page</strong>: a place where I share my ideas, projects, devlogs, art and more."
 ---
-
-{% include components/hero-header.html
-img="/assets/img/perfil-Chispi.jpg"
-title="Hi! I'm <span class='text-verde-1'>Chispi</span>"
-subtitle="Developer | Data Analyst | Content Creator"
-description="Welcome to <strong>Chispi Page</strong>: a place where I share my ideas, projects, devlogs, art and more."
-buttons=site.data.buttons
-%}
-
-
