--- a/gracias.html
+++ b/gracias.html
@@ -1,16 +1,13 @@
 ---
-layout: default
+layout: landing
 title: ¡Gracias!
 lang: es
+permalink: /gracias.html
 hero: true
-hero_image_dark: "/assets/img/contacto-bg-dark.jpg"
-hero_image_light: "/assets/img/contacto-bg-light.jpg"
+hero_image_dark: "/assets/img/gracias-bg-dark.jpg"
+hero_image_light: "/assets/img/gracias-bg-light.jpg"
+hero_img: "/assets/img/perfil-Chispi.jpg"
+hero_title: "¡Gracias por tu mensaje!"
+hero_subtitle: "Responderé lo antes posible"
+hero_description: "Mientras tanto, puedes explorar más proyectos o seguirme en redes sociales."
 ---
-
-<section class="py-5 text-center">
-  <div class="container">
-    <h2 class="fw-bold mb-4">¡Gracias por tu mensaje!</h2>
-    <p class="lead mb-4">He recibido tu mensaje y me pondré en contacto contigo lo antes posible.</p>
-    <a href="{{ '/' | relative_url }}" class="btn btn-outline-verde-2 btn-lg">Volver al inicio</a>
-  </div>
-</section>
