--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 ---
-layout: default
+layout: landing
 title: Bienvenido a Chispi Page
 lang: es
 hero: true
+permalink: /index.html
 hero_image_dark: "/assets/img/index-bg-dark.jpg"
 hero_image_light: "/assets/img/index-bg-light.jpg"
+hero_img: "/assets/img/perfil-Chispi.jpg"
+hero_title: "¡Hola! Soy <span class='text-verde-1'>Chispi</span>"
+hero_subtitle: "Desarrolladora | Analista de Datos | Creadora de contenido"
+hero_description: "Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más."
 ---
-
-{% include components/hero-header.html
-img="/assets/img/perfil-Chispi.jpg"
-title="¡Hola! Soy <span class='text-verde-1'>Chispi</span>"
-subtitle="Desarrolladora | Analista de Datos | Creadora de contenido"
-description="Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más."
-buttons=site.data.buttons
-%}
