--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -69,13 +69,20 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
       <!-- 🖥️ Tecnologías principales -->
       <div class="col-12 col-md-6">
         <div class="box box-mar">
-          {% include components/section.html
-            title="🖥️ Tecnologías principales"
-            content_include="components/stack.html"
-            content_data=site.data.skills_tech_main
-          %}
-        </div>
+         
+          <h3 class="text-2xl font-semibold mb-4">"🖥️ Tecnologías principales"</h3>
 
+          <!-- Grid de secciones: 1 columna móvil, 2 en tablet, 3 en escritorio -->
+          <div class="row g-4">
+            {% for section in site.data.skills-tech-main %}
+            {% include skills-tech-main/item.html
+            name=item.name
+            logo=item.logo
+            color=item.color
+            tooltip=item.tooltip %}
+            {% endfor %}
+          </div>
+          {% endfor %}
         </div>
       </div>
 
