--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -75,7 +75,7 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
           <!-- Grid de secciones: 1 columna móvil, 2 en tablet, 3 en escritorio -->
           <div class="row g-4">
             {% for section in site.data.skills-tech-main %}
-            {% include skills-tech-main/item.html
+            {% include skills/item.html
             name=item.name
             logo=item.logo
             color=item.color
