--- a/en/sobre-mi.html
+++ b/en/sobre-mi.html
@@ -72,9 +72,9 @@ subtitle: "Developer | Designer | Data Analyst"
       <div class="col-12 col-md-6">
         <div class="box box-mar">
           <h3 class="text-2xl font-semibold mb-4">🖥️ Main Technologies</h3>
-          <!-- Grid de secciones: 1 columna móvil, 2 en tablet, 3 en escritorio -->
-          <div class="row g-4">
-            {% for section in site.data.skills-tech-main %}
+          
+          <div class="d-flex flex-wrap gap-2">
+            {% for item in site.data.skills-tech-main %}
             {% include skills/item.html
             name=item.name
             logo=item.logo
