--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -69,12 +69,10 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
       <!-- 🖥️ Tecnologías principales -->
       <div class="col-12 col-md-6">
         <div class="box box-mar">
-         
-          <h3 class="text-2xl font-semibold mb-4">"🖥️ Tecnologías principales"</h3>
+          <h3 class="text-2xl font-semibold mb-4">🖥️ Tecnologías principales</h3>
 
-          <!-- Grid de secciones: 1 columna móvil, 2 en tablet, 3 en escritorio -->
-          <div class="row g-4">
-            {% for section in site.data.skills-tech-main %}
+          <div class="d-flex flex-wrap gap-2">
+            {% for item in site.data.skills-tech-main %}
             {% include skills/item.html
             name=item.name
             logo=item.logo
@@ -84,6 +82,7 @@ subtitle: "Desarrolladora | Diseñadora | Analista de Datos"
           </div>
         </div>
       </div>
+
 
       <!-- 🔥 Qué estoy haciendo -->
       <div class="col-12 col-md-6">
