--- a/404.html
+++ b/404.html
@@ -1,27 +1,13 @@
 ---
 layout: landing
 title: Página no encontrada
+permalink: {{ '/404.html' | relative_url }}
 lang: es
-permalink: /404.html
+hero_img: "{{ '/assets/icons/404-light.svg' | relative_url }}"
+hero_img_dark: "{{ '/assets/icons/404-dark.svg' | relative_url }}"
+hero_title: "¡Oops! <span class='text-verde-1'>Página no encontrada</span>"
+hero_description: "Parece que esta página no existe. Puedes regresar al <a href='/' class='text-verde-1 fw-bold'>inicio</a>."
+hero_cta_text: "Volver al inicio"
+hero_cta_url: "{{ '/' | relative_url }}"
+no_content: true
 ---
-
-<header class="hero d-flex align-items-center justify-content-center text-center position-relative" style="min-height: 100vh;">
-    <div class="container px-4 px-lg-5 text-center" style="z-index: 2;">
-        <div class="text-box">
-
-            <!-- Ilustración adaptable al tema -->
-            <div class="mb-4">
-                <picture>
-                    <source srcset="/assets/icons/404-dark.svg" media="(prefers-color-scheme: dark)">
-                    <img src="/assets/icons/404-light.svg" alt="404 - Página no encontrada" width="240" class="img-fluid">
-                </picture>
-            </div>
-
-            <!-- Texto -->
-            <h1 class="display-4 fw-bold">¡Oops! <span class="text-verde-1">Página no encontrada</span></h1>
-            <p class="lead mb-4">Parece que esta página no existe.<br> Puedes regresar al <a href="/" class="text-verde-1 fw-bold">inicio</a>.</p>
-
-            <a href="/" class="btn btn-outline-verde-1 btn-lg">Volver al inicio</a>
-        </div>
-    </div>
-</header>
