--- a/en-proceso.html
+++ b/en-proceso.html
@@ -1,29 +1,13 @@
 ---
 layout: landing
 title: En construcción
+permalink: {{ '/en-proceso.html' | relative_url }}
 lang: es
-permalink: /en-proceso.html
+hero_img: "{{ '/assets/icons/under-construction-light.svg' | relative_url }}"
+hero_img_dark: "{{ '/assets/icons/under-construction-dark.svg' | relative_url }}"
+hero_title: "Esta sección está <span class='text-verde-1'>en construcción</span>"
+hero_description: "Estoy trabajando para traerte algo genial muy pronto."
+hero_cta_text: "Ir al inicio"
+hero_cta_url: "{{ '/' | relative_url }}"
+no_content: true
 ---
-
-<header class="hero d-flex align-items-center justify-content-center text-center position-relative" style="min-height: 100vh;">
-    <div class="container px-4 px-lg-5 text-center" style="z-index: 2;">
-        <div class="text-box">
-
-            <!-- Ilustración SVG adaptable al tema -->
-            <div class="mb-4">
-                <picture>
-                    <!-- Ilustración para modo oscuro -->
-                    <source srcset="/assets/icons/under-construction-dark.svg" media="(prefers-color-scheme: dark)">
-                    <!-- Ilustración para modo claro -->
-                    <img src="/assets/icons/under-construction-light.svg" alt="Página en construcción" width="200" class="img-fluid">
-                </picture>
-            </div>
-
-            <h1 class="display-4 fw-bold">Esta sección está <span class="text-verde-1">en construcción</span></h1>
-            <p class="lead mb-4">Estoy trabajando para traerte algo genial muy pronto.</p>
-
-            <a href="/" class="btn btn-outline-verde-1 btn-lg">Ir al inicio</a>
-        </div>
-    </div>
-</header>
-
