--- a/en/404.html
+++ b/en/404.html
@@ -1,25 +1,16 @@
 ---
 layout: landing
 title: Page Not Found
-permalink: /en/404.html
 lang: en
+permalink: {{ '/en/404.html' | relative_url }}
+hero: true
+hero_image_dark: "{{ '/assets/img/index-bg-dark.jpg' | relative_url }}"
+hero_image_light: "{{ '/assets/img/index-bg-light.jpg' | relative_url }}"
+hero_img: "{{ '/assets/icons/404-light.svg' | relative_url }}"
+hero_img_dark: "{{ '/assets/icons/404-dark.svg' | relative_url }}"
+hero_title: "Oops! <span class='text-verde-1'>We couldn’t find</span> that page"
+hero_subtitle: "Error 404"
+hero_description: "The page you're looking for might have been moved or doesn't exist. Please return to the homepage."
+hero_cta_text: "Back to Home"
+hero_cta_url: "{{ '/en' | relative_url }}"
 ---
-
-<header class="hero d-flex align-items-center justify-content-center text-center position-relative" style="min-height: 100vh;">
-    <div class="container px-4 px-lg-5 text-center" style="z-index: 2;">
-        <div class="text-box">
-
-            <div class="mb-4">
-                <picture>
-                    <source srcset="/assets/icons/404-dark.svg" media="(prefers-color-scheme: dark)">
-                    <img src="/assets/icons/404-light.svg" alt="404 - Page Not Found" width="240" class="img-fluid">
-                </picture>
-            </div>
-
-            <h1 class="display-4 fw-bold">Oops! <span class="text-verde-1">We couldn’t find</span> that page</h1>
-            <p class="lead mb-4">The page you're looking for might have been moved or doesn't exist.</p>
-
-            <a href="/en/" class="btn btn-outline-verde-1 btn-lg">Back to Home</a>
-        </div>
-    </div>
-</header>
