--- a/en/en-proceso.html
+++ b/en/en-proceso.html
@@ -1,25 +1,13 @@
 ---
 layout: landing
-title: In progress
-permalink: /en/in-progress.html
+title: In Progress
+permalink: {{ '/en/in-progress.html' | relative_url }}
 lang: en
+hero_img: "{{ '/assets/icons/under-construction-light.svg' | relative_url }}"
+hero_img_dark: "{{ '/assets/icons/under-construction-dark.svg' | relative_url }}"
+hero_title: "This section is <span class='text-verde-1'>under construction</span>"
+hero_description: "I'm working hard to bring you something amazing soon."
+hero_cta_text: "Back to Home"
+hero_cta_url: "{{ '/en' | relative_url }}"
+no_content: true
 ---
-
-<header class="hero d-flex align-items-center justify-content-center text-center position-relative" style="min-height: 100vh;">
-    <div class="container px-4 px-lg-5 text-center" style="z-index: 2;">
-        <div class="text-box">
-
-            <div class="mb-4">
-                <picture>
-                    <source srcset="/assets/icons/under-construction-dark.svg" media="(prefers-color-scheme: dark)">
-                    <img src="/assets/icons/under-construction-light.svg" alt="Page under construction" width="240" class="img-fluid">
-                </picture>
-            </div>
-
-            <h1 class="display-4 fw-bold">This section is <span class="text-verde-1">under construction</span></h1>
-            <p class="lead mb-4">I'm working hard to bring you something amazing soon.</p>
-
-            <a href="/en/" class="btn btn-outline-verde-1 btn-lg">Back to Home</a>
-        </div>
-    </div>
-</header>
