--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -1,26 +1,13 @@
 ---
 layout: landing
 title: Mantenimiento
-permalink: /mantenimiento.html
+permalink: {{ '/mantenimiento.html' | relative_url }}
 lang: es
+hero_img: "{{ '/assets/icons/maintenance-light.svg' | relative_url }}"
+hero_img_dark: "{{ '/assets/icons/maintenance-dark.svg' | relative_url }}"
+hero_title: "Estamos <span class='text-verde-1'>haciendo mejoras</span>"
+hero_description: "Volveremos pronto. Gracias por tu paciencia 💚"
+hero_cta_text: "Ir al inicio"
+hero_cta_url: "{{ '/' | relative_url }}"
+no_content: true
 ---
-
-<header class="hero d-flex align-items-center justify-content-center text-center position-relative" style="min-height: 100vh;">
-    <div class="container px-4 px-lg-5 text-center" style="z-index: 2;">
-        <div class="text-box">
-
-            <!-- Ilustración adaptable al tema -->
-            <div class="mb-4">
-                <picture>
-                    <source srcset="/assets/icons/maintenance-dark.svg" media="(prefers-color-scheme: dark)">
-                    <img src="/assets/icons/maintenance-light.svg" alt="Página en mantenimiento" width="240" class="img-fluid">
-                </picture>
-            </div>
-
-            <h1 class="display-4 fw-bold">Estamos <span class="text-verde-1">haciendo mejoras</span></h1>
-            <p class="lead mb-4">Volveremos pronto. Gracias por tu paciencia 💚</p>
-
-            <a href="/" class="btn btn-outline-verde-1 btn-lg">Ir al inicio</a>
-        </div>
-    </div>
-</header>
