--- a/en/404.html
+++ b/en/404.html
@@ -2,7 +2,7 @@
 layout: landing
 title: Page Not Found
 lang: en
-permalink: {{ '/en/404.html' | relative_url }}
+permalink: /en/404.html
 hero: true
 hero_image_dark: "{{ '/assets/img/index-bg-dark.jpg' | relative_url }}"
 hero_image_light: "{{ '/assets/img/index-bg-light.jpg' | relative_url }}"
