--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 title: Página no encontrada
-permalink: {{ '/404.html' | relative_url }}
+permalink: /404.html
 lang: es
 hero_img: "{{ '/assets/icons/404-light.svg' | relative_url }}"
 hero_img_dark: "{{ '/assets/icons/404-dark.svg' | relative_url }}"
