--- a/en-proceso.html
+++ b/en-proceso.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 title: En construcción
-permalink: {{ '/en-proceso.html' | relative_url }}
+permalink: /en-proceso.html
 lang: es
 hero_img: "{{ '/assets/icons/under-construction-light.svg' | relative_url }}"
 hero_img_dark: "{{ '/assets/icons/under-construction-dark.svg' | relative_url }}"
