--- a/en/en-proceso.html
+++ b/en/en-proceso.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 title: In Progress
-permalink: {{ '/en/in-progress.html' | relative_url }}
+permalink: /en/in-progress.html
 lang: en
 hero_img: "{{ '/assets/icons/under-construction-light.svg' | relative_url }}"
 hero_img_dark: "{{ '/assets/icons/under-construction-dark.svg' | relative_url }}"
