--- a/en/mantenimiento.html
+++ b/en/mantenimiento.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 title: Maintenance
-permalink: {{ '/en/maintenance.html' | relative_url }}
+permalink: /en/maintenance.html
 lang: en
 hero_img: "{{ '/assets/icons/maintenance-light.svg' | relative_url }}"
 hero_img_dark: "{{ '/assets/icons/maintenance-dark.svg' | relative_url }}"
