--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 title: Mantenimiento
-permalink: {{ '/mantenimiento.html' | relative_url }}
+permalink: /mantenimiento.html
 lang: es
 hero_img: "{{ '/assets/icons/maintenance-light.svg' | relative_url }}"
 hero_img_dark: "{{ '/assets/icons/maintenance-dark.svg' | relative_url }}"
