--- a/en/en-proceso.html
+++ b/en/en-proceso.html
@@ -3,8 +3,8 @@ layout: landing
 title: In Progress
 permalink: /en/in-progress.html
 lang: en
-hero_img: "{{ '/assets/icons/under-construction-light.svg' | relative_url }}"
-hero_img_dark: "{{ '/assets/icons/under-construction-dark.svg' | relative_url }}"
+hero_img: "/assets/icons/under-construction-light.svg"
+hero_img_dark: "/assets/icons/under-construction-dark.svg"
 hero_title: "This section is <span class='text-verde-1'>under construction</span>"
 hero_description: "I'm working hard to bring you something amazing soon."
 no_content: true
