--- a/404.html
+++ b/404.html
@@ -3,9 +3,12 @@ layout: landing
 title: Página no encontrada
 permalink: /404.html
 lang: es
-hero_img: "{{ '/assets/icons/404-light.svg' | relative_url }}"
-hero_img_dark: "{{ '/assets/icons/404-dark.svg' | relative_url }}"
+hero_image_dark: "{{ '/assets/img/index-bg-dark.jpg' | relative_url }}"
+hero_image_light: "{{ '/assets/img/index-bg-light.jpg' | relative_url }}"
+hero_img: "/assets/icons/404-light.svg"
+hero_img_dark: "/assets/icons/404-dark.svg"
 hero_title: "¡Oops! <span class='text-verde-1'>Página no encontrada</span>"
-hero_description: "Parece que esta página no existe. Puedes regresar al <a href='/' class='text-verde-1 fw-bold'>inicio</a>."
+hero_subtitle: "Error 404"
+hero_description: "Parece que esta página no existe. Puedes regresar al <a href="{{ '/' | relative_url }}" class='text-verde-1 fw-bold'>inicio</a>."
 no_content: true
 ---
