--- a/en/404.html
+++ b/en/404.html
@@ -6,9 +6,10 @@ permalink: /en/404.html
 hero: true
 hero_image_dark: "{{ '/assets/img/index-bg-dark.jpg' | relative_url }}"
 hero_image_light: "{{ '/assets/img/index-bg-light.jpg' | relative_url }}"
-hero_img: "{{ '/assets/icons/404-light.svg' | relative_url }}"
-hero_img_dark: "{{ '/assets/icons/404-dark.svg' | relative_url }}"
+hero_img: "/assets/icons/404-light.svg"
+hero_img_dark: "/assets/icons/404-dark.svg"
 hero_title: "Oops! <span class='text-verde-1'>We couldn’t find</span> that page"
 hero_subtitle: "Error 404"
-hero_description: "The page you're looking for might have been moved or doesn't exist. Please return to the homepage."
+hero_description: "The page you're looking for might have been moved or doesn't exist. Please return to the <a href="{{ '/en' | relative_url }}" class='text-verde-1 fw-bold'>homepage</a>."
+no_content: true
 ---
